# rb1_autonomy

./: CMakeLists.txt  README.md  package.xml  rb1_simulation.repos
bt/: approach_and_pick_shelf.xml  carry_and_discharge_shelf.xml  entire.xml  entire_simulation.xml  find_shelf.xml  find_station_and_init_localization.xml
config/real_robot/: autonomy.yaml  server_approach_shelf.yaml  server_find_object.yaml  server_init_localization.yaml
config/sim_robot/: autonomy.yaml  server_approach_shelf.yaml  server_find_object.yaml  server_init_localization.yaml
include/rb1_autonomy/: autonomy.hpp
include/rb1_autonomy/plugins_bt/: change_footprint.hpp  check_approach.hpp  client_approach_shelf.hpp  client_find_object.hpp  client_init_localziation.hpp  client_nav.hpp  handler_platform.hpp  nav_poses.hpp  publish_transform.hpp  turn_robot.hpp  wait_for_goal_nav.hpp
include/rb1_autonomy/servers/: server_approach_shelf.hpp  server_find_object.hpp  server_init_localization.hpp
launch/: autonomy.launch.py  servers.launch.py
src/: autonomy.cpp  main_autonomy.cpp  main_server_approach_shelf.cpp  main_server_find_object.cpp  main_server_init_localization.cpp
src/plugins_bt/: change_footprint.cpp  check_approach.cpp  client_approach_shelf.cpp  client_find_object.cpp  client_init_localization.cpp  client_nav.cpp  handler_platform.cpp  nav_poses.cpp  publish_transform.cpp  turn_robot.cpp  wait_for_goal_nav.cpp
src/servers/: server_approach_shelf.cpp  server_find_object.cpp  server_init_localization.cpp
